# makesymlinks

./: Makefile.am  README.md  configure.ac
doc/: CHANGELOG.md  makesymlinks.1.h2m
man/: makesymlinks.1
src/: makesymlinks.c
